infra/terraform_backup_1760614466/jenkins_ec2.tf
data "aws_ami" "ubuntu" {
  most_recent = true
  owners = ["099720109477"] # Canonical Ubuntu
  filter { name = "name" values = ["ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*"] }
}

resource "aws_security_group" "jenkins_sg" {
  name = "cinereads-jenkins-sg"
  vpc_id = aws_vpc.main.id

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = [var.public_ssh_cidr]
  }
  ingress {
    from_port = 8080
    to_port = 8080
    protocol = "tcp"
    cidr_blocks = [var.public_ssh_cidr]
  }
  egress { from_port = 0 to_port = 0 protocol = "-1" cidr_blocks = ["0.0.0.0/0"] }
}

resource "aws_instance" "jenkins" {
  ami           = data.aws_ami.ubuntu.id
  instance_type = var.jenkins_instance_type
  subnet_id     = aws_subnet.public[0].id
  key_name      = var.ssh_key_name
  iam_instance_profile = aws_iam_instance_profile.jenkins_profile.name

  tags = { Name = "cinereads-jenkins" }

  vpc_security_group_ids = [aws_security_group.jenkins_sg.id]
}
